@@ -943,7 +943,26 @@ but not <a href="/" rel="me nofollow">this</a>!
       "Content-Disposition: form-data; name=\"userfile1\"; filename=\"#{name}\"",
       page.body
     )
-    assert page.body.length > File.read(__FILE__).length
+    assert_send [page.body.bytesize, :>, File.size(__FILE__)]
+  end
+
+  def test_post_file_upload_nonascii
+    name = 'ユーザファイル1'
+    file_upload = Mechanize::Form::FileUpload.new({'name' => 'userfile1'}, name)
+    file_upload.file_data = File.read(__FILE__)
+    file_upload.mime_type = 'application/zip'
+
+    page = @mech.post('http://localhost/file_upload', {
+      :name       => 'Some file',
+      :userfile1  => file_upload
+    })
+
+    assert_match(
+      "Content-Disposition: form-data; name=\"userfile1\"; filename=\"#{name}\"".force_encoding(Encoding::ASCII_8BIT),
+      page.body
+    )
+    assert_match("Content-Type: application/zip", page.body)
+    assert_send [page.body.bytesize, :>, File.size(__FILE__)]
   end
 
   def test_post_file_upload
@@ -962,7 +981,7 @@ but not <a href="/" rel="me nofollow">this</a>!
       page.body
     )
     assert_match("Content-Type: application/zip", page.body)
-    assert page.body.length > File.read(__FILE__).length
+    assert_send [page.body.bytesize, :>, File.size(__FILE__)]
   end
 
   def test_post_redirect
@@ -1156,7 +1175,7 @@ but not <a href="/" rel="me nofollow">this</a>!
 
     page = @mech.submit(form)
 
-    contents = File.read __FILE__
+    contents = File.binread __FILE__
     basename = File.basename __FILE__
 
     assert_match(
@@ -1176,7 +1195,7 @@ but not <a href="/" rel="me nofollow">this</a>!
 
     page = @mech.submit(form)
 
-    contents = File.read __FILE__
+    contents = File.binread __FILE__
     basename = File.basename __FILE__
     assert_match(
       "Content-Disposition: form-data; name=\"green[eggs]\"; filename=\"#{basename}\"",
