@@ -9,6 +9,7 @@
 * Bug fix
   * Don't cause infinite loop when `GET /robots.txt` redirects. (#457)
   * Fix basic authentication for a realm that contains uppercase characters. (#458, #459)
+  * Fix encoding error when uploading a file which name is non-ASCII. (#333)
 
 === 2.7.4
 
